--- a/app.html
+++ b/app.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <base href="/app-test-bed/">
   <title>PrioBox — Focus What Matters</title>
   <meta name="description" content="PrioBox — Eisenhower priority matrix with due dates, labels, calendar export and cloud sync." />
   <link rel="stylesheet" href="./src/styles/theme.css" />
